--- a/manager/templates/appointment_sch.html
+++ b/manager/templates/appointment_sch.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-compatible" content="IE=edge">
-    <link rel="stylesheet" href="appointment_sch.css">
-    <link rel="icon" href="images/building-place-hospital-png.webp" style="height: 70px; width: 70px;">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <title>QuickCure Manager HMS</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-compatible" content="IE=edge">
+  <link rel="stylesheet" href="appointment_sch.css">
+  <link rel="icon" href="images/building-place-hospital-png.webp" style="height: 70px; width: 70px;">
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+  <title>QuickCure Manager HMS</title>
 </head>
+
 <body>
-      <nav class="navbar navbar-expand-lg">
-        <img src="images/building-place-hospital-png.webp" alt="logo" style="height: auto; width: 70px;">
-      <div class="container-fluid">
-      
+  <nav class="navbar navbar-expand-lg">
+    <img src="images/building-place-hospital-png.webp" alt="logo" style="height: auto; width: 70px;">
+    <div class="container-fluid">
+
       <h1>QuickCure Manager HMS</h1>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -24,7 +27,7 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#section-about">Appointment</a>
+            <a class="nav-link" href="appointment_sch.html">Appointment</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#services">Services</a>
@@ -32,77 +35,80 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">logout</a>
           </li>
-      
-        
+
+
       </div>
     </div>
   </nav>
-<section id="patient-section">
-    <h1 style="background-color: rgba(0, 0, 0, 0.3); text-align: center; font-family: Arial, Helvetica, sans-serif;">Please Fill Out the Form to Book an Appointment</h1>
+  <section id="patient-section">
+    <h1 style="background-color: rgba(0, 0, 0, 0.3); text-align: center; font-family: Arial, Helvetica, sans-serif;">
+      Please Fill Out the Form to Book an Appointment</h1>
     <div class="container-appointment">
-        <h2 style="color: white; text-align: center;">Patient Appointment <br> Form</h2>
-        <form>
-            <label for="firstname">Full Name:</label>
-            <input type="text" id="firstname" name="firstname"> 
-            <label for="doctor">Department Name:</label>
-            <select id="department" name="department">
-                <option value="selct-dept">Select dept.</option>
-                <option value="Cardiology">Cardiology</option>
-                <option value="ENT specialists">ENT specialists</option>
-                <option value="Dentistry">Dentistry</option>
-                <option value="Blood Screening">Blood Screening</option>
-                <option value="Pediatrics">Pediatrics</option>
-            </select>
-            <label for="date">Date:</label>
-            <input type="date" id="date" name="date">
-    
-            <label for="time">Time:</label>
-            <input type="time" id="time" name="time">
-    
-            <label for="sex">Sex:</label>
-            <select id="sex" name="sex">
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-            </select>
-            <label for="phone">Phone No:</label>  
-              <input type="phone" id="phone1" name="phone">
-            <label for="reason">Reason for Appointment:</label>
-            <textarea id="reason" name="reason" rows="4"></textarea>
-    
-            <button type="button" name="send" onclick="window.location.href='doctor.html';">Send</button>
-        </form>
-        
+      <h2 style="color: white; text-align: center;">Patient Appointment <br> Form</h2>
+      <form>
+        <label for="firstname">Full Name:</label>
+        <input type="text" id="firstname" name="firstname">
+        <label for="doctor">Department Name:</label>
+        <select id="department" name="department">
+          <option value="selct-dept">Select dept.</option>
+          <option value="Cardiology">Cardiology</option>
+          <option value="ENT specialists">ENT specialists</option>
+          <option value="Dentistry">Dentistry</option>
+          <option value="Blood Screening">Blood Screening</option>
+          <option value="Pediatrics">Pediatrics</option>
+        </select>
+        <label for="date">Date:</label>
+        <input type="date" id="date" name="date">
+
+        <label for="time">Time:</label>
+        <input type="time" id="time" name="time">
+
+        <label for="sex">Sex:</label>
+        <select id="sex" name="sex">
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+        </select>
+        <label for="phone">Phone No:</label>
+        <input type="phone" id="phone1" name="phone">
+        <label for="reason">Reason for Appointment:</label>
+        <textarea id="reason" name="reason" rows="4"></textarea>
+
+        <button type="button" name="send" onclick="window.location.href='status.html';">Send</button>
+      </form>
+
     </div>
-</section>
-    
-<footer class="footer py-1">
-  <div class="container text-center">
+  </section>
+
+  <footer class="footer py-1">
+    <div class="container text-center">
       <div class="row">
-          <div class="col-md-4">
-              <h5>Connect With Us</h5>
-              <a href="mailto:your.email@gmail.com"><i class="fab fa-google"></i> Gmail |</a>
-              <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i> Twitter |</a>
-              <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"></i> Facebook</a>
-          </div>
-          <div class="col-md-4">
-            <h5>Newsletter</h5>
-            <p>Subscribe to our newsletter for updates</p>
-            <form>
-                <div class="input-group mb-3">
-                    <input type="email" class="form-control" placeholder="Your Email" aria-label="Your Email" aria-describedby="button-addon2">
-                    <button class="btn btn-primary" type="button" id="button-addon2">Subscribe</button>
-                </div>
-            </form>
+        <div class="col-md-4">
+          <h5>Connect With Us</h5>
+          <a href="mailto:your.email@gmail.com"><i class="fab fa-google"></i> Gmail |</a>
+          <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i> Twitter |</a>
+          <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"></i> Facebook</a>
         </div>
-          <div class="col-md-4">
-              <h5>Evergreen-hospital</h5>
-              <p>No. 70, Allen Ikeja lagos, Nigeria</p>
-              <p>&copy; 2024 All Rights Reserved</p>
-          </div>
+        <div class="col-md-4">
+          <h5>Newsletter</h5>
+          <p>Subscribe to our newsletter for updates</p>
+          <form>
+            <div class="input-group mb-3">
+              <input type="email" class="form-control" placeholder="Your Email" aria-label="Your Email"
+                aria-describedby="button-addon2">
+              <button class="btn btn-primary" type="button" id="button-addon2">Subscribe</button>
+            </div>
+          </form>
+        </div>
+        <div class="col-md-4">
+          <h5>Evergreen-hospital</h5>
+          <p>No. 70, Allen Ikeja lagos, Nigeria</p>
+          <p>&copy; 2024 All Rights Reserved</p>
+        </div>
       </div>
-  </div>
-</footer>
-<script src="index.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    </div>
+  </footer>
+  <script src="index.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
+
 </html>
