doctor file updated

--- a/manager/templates/doctor.html
+++ b/manager/templates/doctor.html
@@ -52,7 +52,8 @@
   <div class="container-doc" style="padding-top: 20px; padding-bottom:15px;">
     <h2 style="border-top:10px; color: #fff;";>Doctor's Appointments List</h2>
     
-    <div class="appointment" style="font-size: 17px;">
+    <div class="row">
+    <div class="appointment col-6" style="font-size: 17px; ">
         <p><strong>Patient Name:</strong> John Doe</p>
         <p><strong>Department:</strong> Dentistry</p>
         <p><strong>Date:</strong> 2024-04-15</p>
@@ -64,7 +65,7 @@
         <button class="decline">Decline</button>
     </div>
     
-    <div class="appointment" style="font-size: 17px;">
+    <div class="appointment col-6" style="font-size: 17px;">
         <p><strong>Patient Name:</strong> Prosper Benard</p>
         <p><strong>Department:</strong> Pediatrics</p>
         <p><strong>Date:</strong> 2024-04-5</p>
@@ -77,7 +78,7 @@
     </div>
 
   </div>
-
+</div>
 <footer class="footer py-1">
   <div class="container text-center">
       <div class="row">
