--- a/manager/static/css/doctor.css
+++ b/manager/static/css/doctor.css
@@ -111,7 +111,7 @@
     width: 40%;
     padding: 10px;
     text-align: center;
-    
+    margin-left: 3%;
 
 }
 /* doctor appointment feedback */
